Implement photoAnchor function

--- a/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
+++ b/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
@@ -1663,7 +1663,7 @@
                                                                                         <rect key="frame" x="0.0" y="0.0" width="116" height="121"/>
                                                                                         <color key="backgroundColor" white="0.0" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                                        <state key="normal">
+                                                                                        <state key="normal" image="pause.fill" catalog="system">
                                                                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="30"/>
                                                                                         </state>
                                                                                         <connections>
@@ -2338,6 +2338,7 @@
         <image name="hand.draw.fill" catalog="system" width="128" height="109"/>
         <image name="hand.point.up.left.fill" catalog="system" width="120" height="128"/>
         <image name="house" catalog="system" width="128" height="106"/>
+        <image name="pause.fill" catalog="system" width="116" height="128"/>
         <image name="pencil" catalog="system" width="128" height="113"/>
         <image name="person.circle.fill" catalog="system" width="128" height="121"/>
         <image name="photo.fill" catalog="system" width="128" height="93"/>
